[package]
name = "ruled-labels"
version = "0.3.2"
edition = "2021"
license-file = "LICENSE"
description = "Utility to check labels"

[dependencies]
clap = { version = "4", features = ["derive", "env", "unicode", "cargo", "color"] }
env_logger = "0.9"
futures = "0.3"
hubcaps = "0.6"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", optional = false }
termion = "2"
semver = { version = "1.0", features = ["serde"] }
regex = "1"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
