[package]
name = "ruled-labels"
version = "0.5.1"
edition = "2021"
license-file = "LICENSE"
description = "Utility to check labels"

[dependencies]
log = "0.4.25"
env_logger = "0.11.5"
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = { version = "0.9.33", optional = false }
termion = "4.0.3"
semver = { version = "1.0.23", features = ["serde"] }
regex = "1.11.1"
anyhow = "1.0.94"
hubcaps = { version = "0.6.2", default-features = false, features = [
	"rustls-tls",
] }
clap = { version = "4.5.28", features = [
	"derive",
	"env",
	"unicode",
	"cargo",
	"color",
] }

[dev-dependencies]
assert_cmd = "2.0.16"
